--- a/stuctural_variants/PennCNV_annotations/merge_penncnv_original.ipynb
+++ b/stuctural_variants/PennCNV_annotations/merge_penncnv_original.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -63,25 +63,26 @@
    "source": [
     "# keep only the columns that are in both\n",
     "cols_keep = [s for s in svs1.columns if s in svs2.columns]\n",
-    "print(cols_keep)"
+    "\n",
+    "print(cols_keep)\n",
+    "\n",
+    "svs1 = svs1[cols_keep].copy()\n",
+    "svs2 = svs2[cols_keep].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# merge the to svs\n",
-    "svs1 = svs1[cols_keep].copy()\n",
-    "svs2 = svs2[cols_keep].copy()\n",
-    "\n",
+    "# merge the two svs\n",
     "svs = svs1.append(svs2).reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,19 +108,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# sort by chromosome and start position\n",
     "svs = svs.sort_values(['Chromosome', 'Start'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# save merged dataframe\n",
     "svs.to_csv('output/merged.PennCNV.tsv', sep='\\t', index=False)"
    ]
   },
