--- a/stuctural_variants/sv2_postprocessing/gnomad_frequency_control.ipynb
+++ b/stuctural_variants/sv2_postprocessing/gnomad_frequency_control.ipynb
@@ -19,7 +19,7 @@
     "# load in sv2 merged table\n",
     "# should have columns ['chrom', 'svtype', 'pos', 'end', 'svlength']\n",
     "# can have more columns\n",
-    "svs = pd.read_csv('output/merged.sv2.tsv', sep='\\t')"
+    "svs = pd.read_csv('output/merged.sv2.breakpoints_resolved.tsv', sep='\\t')"
    ]
   },
   {
@@ -57,38 +57,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "chr1\n",
-      "chr10\n",
-      "chr11\n",
-      "chr12\n",
-      "chr13\n",
-      "chr14\n",
-      "chr15\n",
-      "chr16\n",
-      "chr17\n",
-      "chr18\n",
-      "chr19\n",
-      "chr2\n",
-      "chr20\n",
-      "chr21\n",
-      "chr22\n",
-      "chr3\n",
-      "chr4\n",
-      "chr5\n",
-      "chr6\n",
-      "chr7\n",
-      "chr8\n",
-      "chr9\n",
-      "chrX\n",
-      "chrY\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# loop over every chrom and svtype\n",
     "chromosomes = list(svs.chrom.unique())\n",
@@ -96,7 +65,6 @@
     "svs['gnomad_freq_control'] = '.'\n",
     "\n",
     "for chrom in chromosomes:\n",
-    "    print(chrom)\n",
     "    for svtype in svtypes:\n",
     "        # get all strctural variants in chromosome and svtype\n",
     "        sub_svs = svs[(svs.chrom == chrom) & (svs.svtype == svtype)].copy()\n",
@@ -114,7 +82,7 @@
     "        # iterate over all structural variants in cohort\n",
     "        # and compare against other structural variants gnomad\n",
     "        for i, row in sub_svs.iterrows():\n",
-    "            start = row['pos']\n",
+    "            start = row['start']\n",
     "            end = row['end']\n",
     "            length = row['svlength']\n",
     "\n",
