--- a/stuctural_variants/sv2_postprocessing/gnomad_frequency_non-neuro.ipynb
+++ b/stuctural_variants/sv2_postprocessing/gnomad_frequency_non-neuro.ipynb
@@ -19,7 +19,7 @@
     "# load in sv2 merged table\n",
     "# should have columns ['chrom', 'svtype', 'pos', 'end', 'svlength']\n",
     "# can have more columns\n",
-    "svs = pd.read_csv('output/merged.sv2.tsv', sep='\\t')"
+    "svs = pd.read_csv('output/merged.sv2.breakpoints_resolved.tsv', sep='\\t')"
    ]
   },
   {
@@ -57,38 +57,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "chr1\n",
-      "chr10\n",
-      "chr11\n",
-      "chr12\n",
-      "chr13\n",
-      "chr14\n",
-      "chr15\n",
-      "chr16\n",
-      "chr17\n",
-      "chr18\n",
-      "chr19\n",
-      "chr2\n",
-      "chr20\n",
-      "chr21\n",
-      "chr22\n",
-      "chr3\n",
-      "chr4\n",
-      "chr5\n",
-      "chr6\n",
-      "chr7\n",
-      "chr8\n",
-      "chr9\n",
-      "chrX\n",
-      "chrY\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# loop over every chrom and svtype\n",
     "chromosomes = list(svs.chrom.unique())\n",
@@ -96,7 +65,6 @@
     "svs['gnomad_freq_non_neuro'] = '.'\n",
     "\n",
     "for chrom in chromosomes:\n",
-    "    print(chrom)\n",
     "    for svtype in svtypes:\n",
     "        # get all strctural variants in chromosome and svtype\n",
     "        sub_svs = svs[(svs.chrom == chrom) & (svs.svtype == svtype)].copy()\n",
@@ -114,7 +82,7 @@
     "        # iterate over all structural variants in cohort\n",
     "        # and compare against other structural variants gnomad\n",
     "        for i, row in sub_svs.iterrows():\n",
-    "            start = row['pos']\n",
+    "            start = row['start']\n",
     "            end = row['end']\n",
     "            length = row['svlength']\n",
     "\n",
@@ -139,6 +107,221 @@
    "outputs": [],
    "source": [
     "svs.to_csv('output/merged.sv2.gnomad_non_neuro.tsv', sep='\\t', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sample</th>\n",
+       "      <th>svtype</th>\n",
+       "      <th>chrom</th>\n",
+       "      <th>start</th>\n",
+       "      <th>end</th>\n",
+       "      <th>svlength</th>\n",
+       "      <th>genes</th>\n",
+       "      <th>gnomad_freq_non_neuro</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SG172</td>\n",
+       "      <td>DUP</td>\n",
+       "      <td>chr1</td>\n",
+       "      <td>845001</td>\n",
+       "      <td>850200</td>\n",
+       "      <td>5200</td>\n",
+       "      <td>intergenic</td>\n",
+       "      <td>0.000497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SG172</td>\n",
+       "      <td>DUP</td>\n",
+       "      <td>chr1</td>\n",
+       "      <td>13178567</td>\n",
+       "      <td>13187129</td>\n",
+       "      <td>8563</td>\n",
+       "      <td>NM_001136561,LOC440563,exon_1/1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SG172</td>\n",
+       "      <td>DUP</td>\n",
+       "      <td>chr1</td>\n",
+       "      <td>31070606</td>\n",
+       "      <td>31070669</td>\n",
+       "      <td>64</td>\n",
+       "      <td>intergenic</td>\n",
+       "      <td>0.327312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SG172</td>\n",
+       "      <td>DUP</td>\n",
+       "      <td>chr1</td>\n",
+       "      <td>56996032</td>\n",
+       "      <td>56996346</td>\n",
+       "      <td>315</td>\n",
+       "      <td>NM_003713,PPAP2B,intron_1/5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SG172</td>\n",
+       "      <td>DUP</td>\n",
+       "      <td>chr1</td>\n",
+       "      <td>59644931</td>\n",
+       "      <td>59670360</td>\n",
+       "      <td>25430</td>\n",
+       "      <td>intergenic</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422002</th>\n",
+       "      <td>SG445</td>\n",
+       "      <td>DEL</td>\n",
+       "      <td>chrX</td>\n",
+       "      <td>151982765</td>\n",
+       "      <td>151982840</td>\n",
+       "      <td>76</td>\n",
+       "      <td>intergenic</td>\n",
+       "      <td>0.764914</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422003</th>\n",
+       "      <td>SG445</td>\n",
+       "      <td>DEL</td>\n",
+       "      <td>chrX</td>\n",
+       "      <td>152807507</td>\n",
+       "      <td>152807579</td>\n",
+       "      <td>73</td>\n",
+       "      <td>NM_001001344,ATP2B3,intron_1/19|NM_021949,ATP2...</td>\n",
+       "      <td>0.233868</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422004</th>\n",
+       "      <td>SG445</td>\n",
+       "      <td>DEL</td>\n",
+       "      <td>chrX</td>\n",
+       "      <td>154365486</td>\n",
+       "      <td>154365579</td>\n",
+       "      <td>94</td>\n",
+       "      <td>intergenic</td>\n",
+       "      <td>0.459274</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422005</th>\n",
+       "      <td>SG445</td>\n",
+       "      <td>DEL</td>\n",
+       "      <td>chrX</td>\n",
+       "      <td>154771601</td>\n",
+       "      <td>154785600</td>\n",
+       "      <td>14000</td>\n",
+       "      <td>NM_018196,TMLHE,exon_1/7|NM_018196,TMLHE,intro...</td>\n",
+       "      <td>0.0123515</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422006</th>\n",
+       "      <td>SG445</td>\n",
+       "      <td>DEL</td>\n",
+       "      <td>chrX</td>\n",
+       "      <td>154790190</td>\n",
+       "      <td>154803524</td>\n",
+       "      <td>13335</td>\n",
+       "      <td>NM_018196,TMLHE,UTR5|NM_001184797,TMLHE,UTR5</td>\n",
+       "      <td>0.857326</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>422007 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       sample svtype chrom      start        end  svlength  \\\n",
+       "0       SG172    DUP  chr1     845001     850200      5200   \n",
+       "1       SG172    DUP  chr1   13178567   13187129      8563   \n",
+       "2       SG172    DUP  chr1   31070606   31070669        64   \n",
+       "3       SG172    DUP  chr1   56996032   56996346       315   \n",
+       "4       SG172    DUP  chr1   59644931   59670360     25430   \n",
+       "...       ...    ...   ...        ...        ...       ...   \n",
+       "422002  SG445    DEL  chrX  151982765  151982840        76   \n",
+       "422003  SG445    DEL  chrX  152807507  152807579        73   \n",
+       "422004  SG445    DEL  chrX  154365486  154365579        94   \n",
+       "422005  SG445    DEL  chrX  154771601  154785600     14000   \n",
+       "422006  SG445    DEL  chrX  154790190  154803524     13335   \n",
+       "\n",
+       "                                                    genes  \\\n",
+       "0                                              intergenic   \n",
+       "1                         NM_001136561,LOC440563,exon_1/1   \n",
+       "2                                              intergenic   \n",
+       "3                             NM_003713,PPAP2B,intron_1/5   \n",
+       "4                                              intergenic   \n",
+       "...                                                   ...   \n",
+       "422002                                         intergenic   \n",
+       "422003  NM_001001344,ATP2B3,intron_1/19|NM_021949,ATP2...   \n",
+       "422004                                         intergenic   \n",
+       "422005  NM_018196,TMLHE,exon_1/7|NM_018196,TMLHE,intro...   \n",
+       "422006       NM_018196,TMLHE,UTR5|NM_001184797,TMLHE,UTR5   \n",
+       "\n",
+       "       gnomad_freq_non_neuro  \n",
+       "0                   0.000497  \n",
+       "1                          0  \n",
+       "2                   0.327312  \n",
+       "3                          0  \n",
+       "4                          0  \n",
+       "...                      ...  \n",
+       "422002              0.764914  \n",
+       "422003              0.233868  \n",
+       "422004              0.459274  \n",
+       "422005             0.0123515  \n",
+       "422006              0.857326  \n",
+       "\n",
+       "[422007 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svs"
    ]
   },
   {
