--- a/stuctural_variants/sv2_postprocessing/intra_cohort_frequency.ipynb
+++ b/stuctural_variants/sv2_postprocessing/intra_cohort_frequency.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "svs = pd.read_csv('output/merged.sv2.tsv', sep='\\t')"
+    "svs = pd.read_csv('output/merged.sv2.breakpoints_resolved.tsv', sep='\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,13 +47,13 @@
     "        # create numpy structures for end, start, and svlength\n",
     "        # (numpy is faster than pandas)\n",
     "        chrom_ends = sub_svs['end'].to_numpy()\n",
-    "        chrom_starts = sub_svs['pos'].to_numpy()\n",
+    "        chrom_starts = sub_svs['start'].to_numpy()\n",
     "        chrom_svlengths = sub_svs['svlength'].to_numpy()\n",
     "\n",
     "        # iterate over all structural variants in chrom\n",
     "        # and compare against other structural variants in chrom\n",
     "        for i, row in sub_svs.iterrows():\n",
-    "            start = row['pos']\n",
+    "            start = row['start']\n",
     "            end = row['end']\n",
     "            length = row['svlength']\n",
     "\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
