--- a/stuctural_variants/sv2_postprocessing/resolve_sv2_breakpoints.ipynb
+++ b/stuctural_variants/sv2_postprocessing/resolve_sv2_breakpoints.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Resolves breakpoints from SV2 output.\n",
     "\n",
-    "# Takes in combined table of SV2 calls \n",
+    "# Takes in table of SV2 calls \n",
     "# and merges samples calls that overlap (Note: no 50% reciprocal overlap requirement).\n",
     "# The outer breakpoints become the new breakpoints"
    ]
@@ -95,7 +95,7 @@
     "    lengthp = df.at[df.index[0], 'svlength']\n",
     "    genesp = df.at[df.index[0], 'genes']\n",
     "    \n",
-    "    # will load merged calls into output\n",
+    "    # will place merged calls here\n",
     "    output = []\n",
     "    \n",
     "    # loop starting with second row in dataframe\n",
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# loop over every chrom, svoutput/pe, and sample\n",
+    "# loop over every chrom, svtype, and sample\n",
     "# and merge overlapping structural variants\n",
     "\n",
     "# store the new records here\n",
