--- a/stuctural_variants/sv2_postprocessing/combine_all_annotations.ipynb
+++ b/stuctural_variants/sv2_postprocessing/combine_all_annotations.ipynb
@@ -15,12 +15,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('output/merged.sv2.breakpoints_resolved.tsv', sep='\\t')"
+    "df = pd.read_csv('output/merged.sv2.breakpoints_resolved.nearby_merged.tsv', sep='\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "app = pd.read_csv('output/merged.sv2.genes.tsv', sep='\\t')\n",
+    "# check ids match\n",
+    "print((~(app['genes_sv2'] == df['genes'])).sum())\n",
+    "df['genes_sv2'] = df['genes']\n",
+    "df['num_genes'] = app['num_genes']\n",
+    "df['genes'] = app['genes']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rearrange columns\n",
+    "cols = ['sample', 'svtype', 'chrom', 'start', 'end', 'svlength', 'num_genes', 'genes',\n",
+    "       'intracohort_count', 'gnomad_freq_overall', 'gnomad_freq_control',\n",
+    "       'gnomad_freq_non_neuro', 'genes_sv2']\n",
+    "\n",
+    "df = df[cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('output/merged_sv2_annotated.tsv', sep='\\t', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
